2010-01-03  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVGResources don't invalidate if target object changes attributes
        https://bugs.webkit.org/show_bug.cgi?id=33091

        It's neccessary to invalidate all resources of an object, if the attributes of this
        target change. Otherwise the saved resource data (like ImageBuffers) don't match
        to the new object properties.

        Test: svg/custom/resource-invalidate-on-target-update.svg

        * svg/SVGStyledElement.cpp:
        (WebCore::SVGStyledElement::svgAttributeChanged):
        (WebCore::SVGStyledElement::invalidateResources):
        * svg/SVGStyledElement.h:

2010-01-03  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVGResources don't invalidate if target object changes attributes
        https://bugs.webkit.org/show_bug.cgi?id=33091

        Check if SVG resources are invalidated, if target object changes
        attributes.

        * platform/mac/svg/custom/resource-invalidate-on-target-update-expected.checksum: Added.
        * platform/mac/svg/custom/resource-invalidate-on-target-update-expected.png: Added.
        * platform/mac/svg/custom/resource-invalidate-on-target-update-expected.txt: Added.
        * svg/custom/resource-invalidate-on-target-update.svg: Added.


Canonical link: https://commits.webkit.org/44122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52709 268f45cc-cd09-0410-ab3c-d52691b4dbfc